--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   freezed: ^2.4.6
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
+  font_awesome_flutter: ^10.6.0
+  numberpicker: ^2.1.2
 
 dev_dependencies:
   flutter_test:
